// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`URL Components Snapshots > UrlDetailsModal > should render when closed 1`] = `
"<dialog data-v-dd4104c0="" class="backdrop:bg-black backdrop:bg-opacity-50 bg-transparent p-0 max-w-lg w-full">
  <div data-v-dd4104c0="" class="bg-white rounded-lg shadow-xl max-h-[90vh] overflow-hidden">
    <!-- Header -->
    <div data-v-dd4104c0="" class="border-b border-gray-200 px-6 py-4">
      <div data-v-dd4104c0="" class="flex items-center justify-between">
        <h2 data-v-dd4104c0="" class="text-lg font-semibold text-gray-900">URL Details: abc123</h2><button data-v-dd4104c0="" data-testid="close-button" type="button" class="text-gray-400 hover:text-gray-600 focus:outline-none focus:ring-2 focus:ring-orange-500 focus:ring-offset-2 rounded-md p-1"><svg data-v-dd4104c0="" class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
            <path data-v-dd4104c0="" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
          </svg></button>
      </div>
    </div><!-- Content -->
    <div data-v-dd4104c0="" class="p-6 space-y-6">
      <!-- QR Code Section -->
      <div data-v-dd4104c0="" class="pt-6">
        <h3 data-v-dd4104c0="" class="text-sm font-medium text-gray-900 mb-4">QR-Code</h3>
        <div data-v-dd4104c0="" class="grid grid-cols-[auto_1fr] gap-6 items-center justify-center">
          <!-- QR Code -->
          <div data-v-dd4104c0="" class="inline-block p-4 bg-white border-2 border-gray-200 rounded-lg"><img data-v-dd4104c0="" src="[object Object]" alt="QR-Code für abc123" class="w-32 h-32"></div><!-- Download Buttons -->
          <div data-v-dd4104c0="" class="grid grid-rows-2 gap-2 min-w-[120px]">
            <downloadbutton data-v-dd4104c0="" format="png" disabled="false"></downloadbutton>
            <downloadbutton data-v-dd4104c0="" format="svg" disabled="false"></downloadbutton>
          </div>
        </div>
      </div><!-- URL Info & Edit -->
      <div data-v-dd4104c0="" class="space-y-4">
        <div data-v-dd4104c0=""><label data-v-dd4104c0="" class="block text-sm font-medium text-gray-700 mb-1">Kurz-URL</label>
          <div data-v-dd4104c0="" class="flex items-center space-x-2"><input data-v-dd4104c0="" readonly="" class="flex-1 px-3 py-2 border border-gray-300 rounded-md bg-gray-50 text-sm" value="http://localhost:3000/abc123">
            <basebutton data-v-dd4104c0="" variant="secondary" size="sm">Kopieren</basebutton>
          </div>
        </div>
        <form data-v-dd4104c0="" class="space-y-4">
          <div data-v-dd4104c0=""><label data-v-dd4104c0="" for="newShortCode" class="block text-sm font-medium text-gray-700 mb-1">Kurz-Code</label><input data-v-dd4104c0="" id="newShortCode" type="text" required="" placeholder="z.B. mein-link" pattern="[a-zA-Z0-9-_]+" title="Nur Buchstaben, Zahlen, Bindestriche und Unterstriche erlaubt" class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-orange-500 focus:border-orange-500">
            <p data-v-dd4104c0="" class="text-xs text-gray-500 mt-1"> Nur Buchstaben, Zahlen, Bindestriche und Unterstriche erlaubt </p>
          </div>
          <div data-v-dd4104c0=""><label data-v-dd4104c0="" for="newUrl" class="block text-sm font-medium text-gray-700 mb-1">Ziel-URL</label><input data-v-dd4104c0="" id="newUrl" type="url" required="" placeholder="https://example.com" class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-orange-500 focus:border-orange-500"></div><!-- Update Error -->
          <div data-v-dd4104c0="" class="bg-red-50 border border-red-200 rounded-md p-4">
            <div data-v-dd4104c0="" class="flex"><svg data-v-dd4104c0="" class="h-5 w-5 text-red-400" fill="currentColor" viewBox="0 0 20 20">
                <path data-v-dd4104c0="" fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd"></path>
              </svg>
              <div data-v-dd4104c0="" class="ml-3">
                <h3 data-v-dd4104c0="" class="text-sm font-medium text-red-800">Fehler beim Aktualisieren</h3>
                <p data-v-dd4104c0="" class="mt-1 text-sm text-red-700">{
                  "value": ""
                  }</p>
              </div>
            </div>
          </div><!-- Success Message -->
          <div data-v-dd4104c0="" class="bg-green-50 border border-green-200 rounded-md p-4">
            <div class="flex" data-v-dd4104c0=""><svg class="h-5 w-5 text-green-400" fill="currentColor" viewBox="0 0 20 20" data-v-dd4104c0="">
                <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" data-v-dd4104c0=""></path>
              </svg>
              <div class="ml-3" data-v-dd4104c0="">
                <h3 class="text-sm font-medium text-green-800" data-v-dd4104c0="">Erfolgreich aktualisiert</h3>
                <p class="mt-1 text-sm text-green-700" data-v-dd4104c0="">Die URL wurde erfolgreich geändert.</p>
              </div>
            </div>
          </div><!-- Form Actions -->
          <div data-v-dd4104c0="" class="flex justify-end space-x-3 pt-4 border-t border-gray-200">
            <basebutton data-v-dd4104c0="" variant="secondary">Abbrechen</basebutton>
            <basebutton data-v-dd4104c0="" data-testid="save-button" variant="primary" type="submit" disabled="true" loading="[object Object]">Wird aktualisiert...</basebutton>
          </div>
        </form>
      </div>
    </div>
  </div>
</dialog>"
`;

exports[`URL Components Snapshots > UrlDetailsModal > should render when open 1`] = `
"<dialog data-v-dd4104c0="" class="backdrop:bg-black backdrop:bg-opacity-50 bg-transparent p-0 max-w-lg w-full">
  <div data-v-dd4104c0="" class="bg-white rounded-lg shadow-xl max-h-[90vh] overflow-hidden">
    <!-- Header -->
    <div data-v-dd4104c0="" class="border-b border-gray-200 px-6 py-4">
      <div data-v-dd4104c0="" class="flex items-center justify-between">
        <h2 data-v-dd4104c0="" class="text-lg font-semibold text-gray-900">URL Details: abc123</h2><button data-v-dd4104c0="" data-testid="close-button" type="button" class="text-gray-400 hover:text-gray-600 focus:outline-none focus:ring-2 focus:ring-orange-500 focus:ring-offset-2 rounded-md p-1"><svg data-v-dd4104c0="" class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
            <path data-v-dd4104c0="" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
          </svg></button>
      </div>
    </div><!-- Content -->
    <div data-v-dd4104c0="" class="p-6 space-y-6">
      <!-- QR Code Section -->
      <div data-v-dd4104c0="" class="pt-6">
        <h3 data-v-dd4104c0="" class="text-sm font-medium text-gray-900 mb-4">QR-Code</h3>
        <div data-v-dd4104c0="" class="grid grid-cols-[auto_1fr] gap-6 items-center justify-center">
          <!-- QR Code -->
          <div data-v-dd4104c0="" class="inline-block p-4 bg-white border-2 border-gray-200 rounded-lg"><img data-v-dd4104c0="" src="[object Object]" alt="QR-Code für abc123" class="w-32 h-32"></div><!-- Download Buttons -->
          <div data-v-dd4104c0="" class="grid grid-rows-2 gap-2 min-w-[120px]">
            <downloadbutton data-v-dd4104c0="" format="png" disabled="false"></downloadbutton>
            <downloadbutton data-v-dd4104c0="" format="svg" disabled="false"></downloadbutton>
          </div>
        </div>
      </div><!-- URL Info & Edit -->
      <div data-v-dd4104c0="" class="space-y-4">
        <div data-v-dd4104c0=""><label data-v-dd4104c0="" class="block text-sm font-medium text-gray-700 mb-1">Kurz-URL</label>
          <div data-v-dd4104c0="" class="flex items-center space-x-2"><input data-v-dd4104c0="" readonly="" class="flex-1 px-3 py-2 border border-gray-300 rounded-md bg-gray-50 text-sm" value="http://localhost:3000/abc123">
            <basebutton data-v-dd4104c0="" variant="secondary" size="sm">Kopieren</basebutton>
          </div>
        </div>
        <form data-v-dd4104c0="" class="space-y-4">
          <div data-v-dd4104c0=""><label data-v-dd4104c0="" for="newShortCode" class="block text-sm font-medium text-gray-700 mb-1">Kurz-Code</label><input data-v-dd4104c0="" id="newShortCode" type="text" required="" placeholder="z.B. mein-link" pattern="[a-zA-Z0-9-_]+" title="Nur Buchstaben, Zahlen, Bindestriche und Unterstriche erlaubt" class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-orange-500 focus:border-orange-500">
            <p data-v-dd4104c0="" class="text-xs text-gray-500 mt-1"> Nur Buchstaben, Zahlen, Bindestriche und Unterstriche erlaubt </p>
          </div>
          <div data-v-dd4104c0=""><label data-v-dd4104c0="" for="newUrl" class="block text-sm font-medium text-gray-700 mb-1">Ziel-URL</label><input data-v-dd4104c0="" id="newUrl" type="url" required="" placeholder="https://example.com" class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-orange-500 focus:border-orange-500"></div><!-- Update Error -->
          <div data-v-dd4104c0="" class="bg-red-50 border border-red-200 rounded-md p-4">
            <div data-v-dd4104c0="" class="flex"><svg data-v-dd4104c0="" class="h-5 w-5 text-red-400" fill="currentColor" viewBox="0 0 20 20">
                <path data-v-dd4104c0="" fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd"></path>
              </svg>
              <div data-v-dd4104c0="" class="ml-3">
                <h3 data-v-dd4104c0="" class="text-sm font-medium text-red-800">Fehler beim Aktualisieren</h3>
                <p data-v-dd4104c0="" class="mt-1 text-sm text-red-700">{
                  "value": ""
                  }</p>
              </div>
            </div>
          </div><!-- Success Message -->
          <div data-v-dd4104c0="" class="bg-green-50 border border-green-200 rounded-md p-4">
            <div class="flex" data-v-dd4104c0=""><svg class="h-5 w-5 text-green-400" fill="currentColor" viewBox="0 0 20 20" data-v-dd4104c0="">
                <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" data-v-dd4104c0=""></path>
              </svg>
              <div class="ml-3" data-v-dd4104c0="">
                <h3 class="text-sm font-medium text-green-800" data-v-dd4104c0="">Erfolgreich aktualisiert</h3>
                <p class="mt-1 text-sm text-green-700" data-v-dd4104c0="">Die URL wurde erfolgreich geändert.</p>
              </div>
            </div>
          </div><!-- Form Actions -->
          <div data-v-dd4104c0="" class="flex justify-end space-x-3 pt-4 border-t border-gray-200">
            <basebutton data-v-dd4104c0="" variant="secondary">Abbrechen</basebutton>
            <basebutton data-v-dd4104c0="" data-testid="save-button" variant="primary" type="submit" disabled="true" loading="[object Object]">Wird aktualisiert...</basebutton>
          </div>
        </form>
      </div>
    </div>
  </div>
</dialog>"
`;

exports[`URL Components Snapshots > UrlDetailsModal > should render with different shortCode formats 1`] = `
"<dialog data-v-dd4104c0="" class="backdrop:bg-black backdrop:bg-opacity-50 bg-transparent p-0 max-w-lg w-full">
  <div data-v-dd4104c0="" class="bg-white rounded-lg shadow-xl max-h-[90vh] overflow-hidden">
    <!-- Header -->
    <div data-v-dd4104c0="" class="border-b border-gray-200 px-6 py-4">
      <div data-v-dd4104c0="" class="flex items-center justify-between">
        <h2 data-v-dd4104c0="" class="text-lg font-semibold text-gray-900">URL Details: ABC-123_test</h2><button data-v-dd4104c0="" data-testid="close-button" type="button" class="text-gray-400 hover:text-gray-600 focus:outline-none focus:ring-2 focus:ring-orange-500 focus:ring-offset-2 rounded-md p-1"><svg data-v-dd4104c0="" class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
            <path data-v-dd4104c0="" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
          </svg></button>
      </div>
    </div><!-- Content -->
    <div data-v-dd4104c0="" class="p-6 space-y-6">
      <!-- QR Code Section -->
      <div data-v-dd4104c0="" class="pt-6">
        <h3 data-v-dd4104c0="" class="text-sm font-medium text-gray-900 mb-4">QR-Code</h3>
        <div data-v-dd4104c0="" class="grid grid-cols-[auto_1fr] gap-6 items-center justify-center">
          <!-- QR Code -->
          <div data-v-dd4104c0="" class="inline-block p-4 bg-white border-2 border-gray-200 rounded-lg"><img data-v-dd4104c0="" src="[object Object]" alt="QR-Code für ABC-123_test" class="w-32 h-32"></div><!-- Download Buttons -->
          <div data-v-dd4104c0="" class="grid grid-rows-2 gap-2 min-w-[120px]">
            <downloadbutton data-v-dd4104c0="" format="png" disabled="false"></downloadbutton>
            <downloadbutton data-v-dd4104c0="" format="svg" disabled="false"></downloadbutton>
          </div>
        </div>
      </div><!-- URL Info & Edit -->
      <div data-v-dd4104c0="" class="space-y-4">
        <div data-v-dd4104c0=""><label data-v-dd4104c0="" class="block text-sm font-medium text-gray-700 mb-1">Kurz-URL</label>
          <div data-v-dd4104c0="" class="flex items-center space-x-2"><input data-v-dd4104c0="" readonly="" class="flex-1 px-3 py-2 border border-gray-300 rounded-md bg-gray-50 text-sm" value="http://localhost:3000/ABC-123_test">
            <basebutton data-v-dd4104c0="" variant="secondary" size="sm">Kopieren</basebutton>
          </div>
        </div>
        <form data-v-dd4104c0="" class="space-y-4">
          <div data-v-dd4104c0=""><label data-v-dd4104c0="" for="newShortCode" class="block text-sm font-medium text-gray-700 mb-1">Kurz-Code</label><input data-v-dd4104c0="" id="newShortCode" type="text" required="" placeholder="z.B. mein-link" pattern="[a-zA-Z0-9-_]+" title="Nur Buchstaben, Zahlen, Bindestriche und Unterstriche erlaubt" class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-orange-500 focus:border-orange-500">
            <p data-v-dd4104c0="" class="text-xs text-gray-500 mt-1"> Nur Buchstaben, Zahlen, Bindestriche und Unterstriche erlaubt </p>
          </div>
          <div data-v-dd4104c0=""><label data-v-dd4104c0="" for="newUrl" class="block text-sm font-medium text-gray-700 mb-1">Ziel-URL</label><input data-v-dd4104c0="" id="newUrl" type="url" required="" placeholder="https://example.com" class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-orange-500 focus:border-orange-500"></div><!-- Update Error -->
          <div data-v-dd4104c0="" class="bg-red-50 border border-red-200 rounded-md p-4">
            <div data-v-dd4104c0="" class="flex"><svg data-v-dd4104c0="" class="h-5 w-5 text-red-400" fill="currentColor" viewBox="0 0 20 20">
                <path data-v-dd4104c0="" fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd"></path>
              </svg>
              <div data-v-dd4104c0="" class="ml-3">
                <h3 data-v-dd4104c0="" class="text-sm font-medium text-red-800">Fehler beim Aktualisieren</h3>
                <p data-v-dd4104c0="" class="mt-1 text-sm text-red-700">{
                  "value": ""
                  }</p>
              </div>
            </div>
          </div><!-- Success Message -->
          <div data-v-dd4104c0="" class="bg-green-50 border border-green-200 rounded-md p-4">
            <div class="flex" data-v-dd4104c0=""><svg class="h-5 w-5 text-green-400" fill="currentColor" viewBox="0 0 20 20" data-v-dd4104c0="">
                <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" data-v-dd4104c0=""></path>
              </svg>
              <div class="ml-3" data-v-dd4104c0="">
                <h3 class="text-sm font-medium text-green-800" data-v-dd4104c0="">Erfolgreich aktualisiert</h3>
                <p class="mt-1 text-sm text-green-700" data-v-dd4104c0="">Die URL wurde erfolgreich geändert.</p>
              </div>
            </div>
          </div><!-- Form Actions -->
          <div data-v-dd4104c0="" class="flex justify-end space-x-3 pt-4 border-t border-gray-200">
            <basebutton data-v-dd4104c0="" variant="secondary">Abbrechen</basebutton>
            <basebutton data-v-dd4104c0="" data-testid="save-button" variant="primary" type="submit" disabled="true" loading="[object Object]">Wird aktualisiert...</basebutton>
          </div>
        </form>
      </div>
    </div>
  </div>
</dialog>"
`;

exports[`URL Components Snapshots > UrlDetailsModal > should render with long URLs 1`] = `
"<dialog data-v-dd4104c0="" class="backdrop:bg-black backdrop:bg-opacity-50 bg-transparent p-0 max-w-lg w-full">
  <div data-v-dd4104c0="" class="bg-white rounded-lg shadow-xl max-h-[90vh] overflow-hidden">
    <!-- Header -->
    <div data-v-dd4104c0="" class="border-b border-gray-200 px-6 py-4">
      <div data-v-dd4104c0="" class="flex items-center justify-between">
        <h2 data-v-dd4104c0="" class="text-lg font-semibold text-gray-900">URL Details: abc123</h2><button data-v-dd4104c0="" data-testid="close-button" type="button" class="text-gray-400 hover:text-gray-600 focus:outline-none focus:ring-2 focus:ring-orange-500 focus:ring-offset-2 rounded-md p-1"><svg data-v-dd4104c0="" class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
            <path data-v-dd4104c0="" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
          </svg></button>
      </div>
    </div><!-- Content -->
    <div data-v-dd4104c0="" class="p-6 space-y-6">
      <!-- QR Code Section -->
      <div data-v-dd4104c0="" class="pt-6">
        <h3 data-v-dd4104c0="" class="text-sm font-medium text-gray-900 mb-4">QR-Code</h3>
        <div data-v-dd4104c0="" class="grid grid-cols-[auto_1fr] gap-6 items-center justify-center">
          <!-- QR Code -->
          <div data-v-dd4104c0="" class="inline-block p-4 bg-white border-2 border-gray-200 rounded-lg"><img data-v-dd4104c0="" src="[object Object]" alt="QR-Code für abc123" class="w-32 h-32"></div><!-- Download Buttons -->
          <div data-v-dd4104c0="" class="grid grid-rows-2 gap-2 min-w-[120px]">
            <downloadbutton data-v-dd4104c0="" format="png" disabled="false"></downloadbutton>
            <downloadbutton data-v-dd4104c0="" format="svg" disabled="false"></downloadbutton>
          </div>
        </div>
      </div><!-- URL Info & Edit -->
      <div data-v-dd4104c0="" class="space-y-4">
        <div data-v-dd4104c0=""><label data-v-dd4104c0="" class="block text-sm font-medium text-gray-700 mb-1">Kurz-URL</label>
          <div data-v-dd4104c0="" class="flex items-center space-x-2"><input data-v-dd4104c0="" readonly="" class="flex-1 px-3 py-2 border border-gray-300 rounded-md bg-gray-50 text-sm" value="http://localhost:3000/long123">
            <basebutton data-v-dd4104c0="" variant="secondary" size="sm">Kopieren</basebutton>
          </div>
        </div>
        <form data-v-dd4104c0="" class="space-y-4">
          <div data-v-dd4104c0=""><label data-v-dd4104c0="" for="newShortCode" class="block text-sm font-medium text-gray-700 mb-1">Kurz-Code</label><input data-v-dd4104c0="" id="newShortCode" type="text" required="" placeholder="z.B. mein-link" pattern="[a-zA-Z0-9-_]+" title="Nur Buchstaben, Zahlen, Bindestriche und Unterstriche erlaubt" class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-orange-500 focus:border-orange-500">
            <p data-v-dd4104c0="" class="text-xs text-gray-500 mt-1"> Nur Buchstaben, Zahlen, Bindestriche und Unterstriche erlaubt </p>
          </div>
          <div data-v-dd4104c0=""><label data-v-dd4104c0="" for="newUrl" class="block text-sm font-medium text-gray-700 mb-1">Ziel-URL</label><input data-v-dd4104c0="" id="newUrl" type="url" required="" placeholder="https://example.com" class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-orange-500 focus:border-orange-500"></div><!-- Update Error -->
          <div data-v-dd4104c0="" class="bg-red-50 border border-red-200 rounded-md p-4">
            <div data-v-dd4104c0="" class="flex"><svg data-v-dd4104c0="" class="h-5 w-5 text-red-400" fill="currentColor" viewBox="0 0 20 20">
                <path data-v-dd4104c0="" fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd"></path>
              </svg>
              <div data-v-dd4104c0="" class="ml-3">
                <h3 data-v-dd4104c0="" class="text-sm font-medium text-red-800">Fehler beim Aktualisieren</h3>
                <p data-v-dd4104c0="" class="mt-1 text-sm text-red-700">{
                  "value": ""
                  }</p>
              </div>
            </div>
          </div><!-- Success Message -->
          <div data-v-dd4104c0="" class="bg-green-50 border border-green-200 rounded-md p-4">
            <div class="flex" data-v-dd4104c0=""><svg class="h-5 w-5 text-green-400" fill="currentColor" viewBox="0 0 20 20" data-v-dd4104c0="">
                <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" data-v-dd4104c0=""></path>
              </svg>
              <div class="ml-3" data-v-dd4104c0="">
                <h3 class="text-sm font-medium text-green-800" data-v-dd4104c0="">Erfolgreich aktualisiert</h3>
                <p class="mt-1 text-sm text-green-700" data-v-dd4104c0="">Die URL wurde erfolgreich geändert.</p>
              </div>
            </div>
          </div><!-- Form Actions -->
          <div data-v-dd4104c0="" class="flex justify-end space-x-3 pt-4 border-t border-gray-200">
            <basebutton data-v-dd4104c0="" variant="secondary">Abbrechen</basebutton>
            <basebutton data-v-dd4104c0="" data-testid="save-button" variant="primary" type="submit" disabled="true" loading="[object Object]">Wird aktualisiert...</basebutton>
          </div>
        </form>
      </div>
    </div>
  </div>
</dialog>"
`;

exports[`URL Components Snapshots > UrlDetailsModal > should render with minimal props 1`] = `
"<dialog data-v-dd4104c0="" class="backdrop:bg-black backdrop:bg-opacity-50 bg-transparent p-0 max-w-lg w-full">
  <div data-v-dd4104c0="" class="bg-white rounded-lg shadow-xl max-h-[90vh] overflow-hidden">
    <!-- Header -->
    <div data-v-dd4104c0="" class="border-b border-gray-200 px-6 py-4">
      <div data-v-dd4104c0="" class="flex items-center justify-between">
        <h2 data-v-dd4104c0="" class="text-lg font-semibold text-gray-900">URL Details: min</h2><button data-v-dd4104c0="" data-testid="close-button" type="button" class="text-gray-400 hover:text-gray-600 focus:outline-none focus:ring-2 focus:ring-orange-500 focus:ring-offset-2 rounded-md p-1"><svg data-v-dd4104c0="" class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
            <path data-v-dd4104c0="" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
          </svg></button>
      </div>
    </div><!-- Content -->
    <div data-v-dd4104c0="" class="p-6 space-y-6">
      <!-- QR Code Section -->
      <div data-v-dd4104c0="" class="pt-6">
        <h3 data-v-dd4104c0="" class="text-sm font-medium text-gray-900 mb-4">QR-Code</h3>
        <div data-v-dd4104c0="" class="grid grid-cols-[auto_1fr] gap-6 items-center justify-center">
          <!-- QR Code -->
          <div data-v-dd4104c0="" class="inline-block p-4 bg-white border-2 border-gray-200 rounded-lg"><img data-v-dd4104c0="" src="[object Object]" alt="QR-Code für min" class="w-32 h-32"></div><!-- Download Buttons -->
          <div data-v-dd4104c0="" class="grid grid-rows-2 gap-2 min-w-[120px]">
            <downloadbutton data-v-dd4104c0="" format="png" disabled="false"></downloadbutton>
            <downloadbutton data-v-dd4104c0="" format="svg" disabled="false"></downloadbutton>
          </div>
        </div>
      </div><!-- URL Info & Edit -->
      <div data-v-dd4104c0="" class="space-y-4">
        <div data-v-dd4104c0=""><label data-v-dd4104c0="" class="block text-sm font-medium text-gray-700 mb-1">Kurz-URL</label>
          <div data-v-dd4104c0="" class="flex items-center space-x-2"><input data-v-dd4104c0="" readonly="" class="flex-1 px-3 py-2 border border-gray-300 rounded-md bg-gray-50 text-sm" value="http://localhost:3000/min">
            <basebutton data-v-dd4104c0="" variant="secondary" size="sm">Kopieren</basebutton>
          </div>
        </div>
        <form data-v-dd4104c0="" class="space-y-4">
          <div data-v-dd4104c0=""><label data-v-dd4104c0="" for="newShortCode" class="block text-sm font-medium text-gray-700 mb-1">Kurz-Code</label><input data-v-dd4104c0="" id="newShortCode" type="text" required="" placeholder="z.B. mein-link" pattern="[a-zA-Z0-9-_]+" title="Nur Buchstaben, Zahlen, Bindestriche und Unterstriche erlaubt" class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-orange-500 focus:border-orange-500">
            <p data-v-dd4104c0="" class="text-xs text-gray-500 mt-1"> Nur Buchstaben, Zahlen, Bindestriche und Unterstriche erlaubt </p>
          </div>
          <div data-v-dd4104c0=""><label data-v-dd4104c0="" for="newUrl" class="block text-sm font-medium text-gray-700 mb-1">Ziel-URL</label><input data-v-dd4104c0="" id="newUrl" type="url" required="" placeholder="https://example.com" class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-orange-500 focus:border-orange-500"></div><!-- Update Error -->
          <div data-v-dd4104c0="" class="bg-red-50 border border-red-200 rounded-md p-4">
            <div data-v-dd4104c0="" class="flex"><svg data-v-dd4104c0="" class="h-5 w-5 text-red-400" fill="currentColor" viewBox="0 0 20 20">
                <path data-v-dd4104c0="" fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd"></path>
              </svg>
              <div data-v-dd4104c0="" class="ml-3">
                <h3 data-v-dd4104c0="" class="text-sm font-medium text-red-800">Fehler beim Aktualisieren</h3>
                <p data-v-dd4104c0="" class="mt-1 text-sm text-red-700">{
                  "value": ""
                  }</p>
              </div>
            </div>
          </div><!-- Success Message -->
          <div data-v-dd4104c0="" class="bg-green-50 border border-green-200 rounded-md p-4">
            <div class="flex" data-v-dd4104c0=""><svg class="h-5 w-5 text-green-400" fill="currentColor" viewBox="0 0 20 20" data-v-dd4104c0="">
                <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" data-v-dd4104c0=""></path>
              </svg>
              <div class="ml-3" data-v-dd4104c0="">
                <h3 class="text-sm font-medium text-green-800" data-v-dd4104c0="">Erfolgreich aktualisiert</h3>
                <p class="mt-1 text-sm text-green-700" data-v-dd4104c0="">Die URL wurde erfolgreich geändert.</p>
              </div>
            </div>
          </div><!-- Form Actions -->
          <div data-v-dd4104c0="" class="flex justify-end space-x-3 pt-4 border-t border-gray-200">
            <basebutton data-v-dd4104c0="" variant="secondary">Abbrechen</basebutton>
            <basebutton data-v-dd4104c0="" data-testid="save-button" variant="primary" type="submit" disabled="true" loading="[object Object]">Wird aktualisiert...</basebutton>
          </div>
        </form>
      </div>
    </div>
  </div>
</dialog>"
`;

exports[`URL Components Snapshots > UrlDetailsModal > should render with special characters in URLs 1`] = `
"<dialog data-v-dd4104c0="" class="backdrop:bg-black backdrop:bg-opacity-50 bg-transparent p-0 max-w-lg w-full">
  <div data-v-dd4104c0="" class="bg-white rounded-lg shadow-xl max-h-[90vh] overflow-hidden">
    <!-- Header -->
    <div data-v-dd4104c0="" class="border-b border-gray-200 px-6 py-4">
      <div data-v-dd4104c0="" class="flex items-center justify-between">
        <h2 data-v-dd4104c0="" class="text-lg font-semibold text-gray-900">URL Details: special123</h2><button data-v-dd4104c0="" data-testid="close-button" type="button" class="text-gray-400 hover:text-gray-600 focus:outline-none focus:ring-2 focus:ring-orange-500 focus:ring-offset-2 rounded-md p-1"><svg data-v-dd4104c0="" class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
            <path data-v-dd4104c0="" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
          </svg></button>
      </div>
    </div><!-- Content -->
    <div data-v-dd4104c0="" class="p-6 space-y-6">
      <!-- QR Code Section -->
      <div data-v-dd4104c0="" class="pt-6">
        <h3 data-v-dd4104c0="" class="text-sm font-medium text-gray-900 mb-4">QR-Code</h3>
        <div data-v-dd4104c0="" class="grid grid-cols-[auto_1fr] gap-6 items-center justify-center">
          <!-- QR Code -->
          <div data-v-dd4104c0="" class="inline-block p-4 bg-white border-2 border-gray-200 rounded-lg"><img data-v-dd4104c0="" src="[object Object]" alt="QR-Code für special123" class="w-32 h-32"></div><!-- Download Buttons -->
          <div data-v-dd4104c0="" class="grid grid-rows-2 gap-2 min-w-[120px]">
            <downloadbutton data-v-dd4104c0="" format="png" disabled="false"></downloadbutton>
            <downloadbutton data-v-dd4104c0="" format="svg" disabled="false"></downloadbutton>
          </div>
        </div>
      </div><!-- URL Info & Edit -->
      <div data-v-dd4104c0="" class="space-y-4">
        <div data-v-dd4104c0=""><label data-v-dd4104c0="" class="block text-sm font-medium text-gray-700 mb-1">Kurz-URL</label>
          <div data-v-dd4104c0="" class="flex items-center space-x-2"><input data-v-dd4104c0="" readonly="" class="flex-1 px-3 py-2 border border-gray-300 rounded-md bg-gray-50 text-sm" value="http://localhost:3000/special123">
            <basebutton data-v-dd4104c0="" variant="secondary" size="sm">Kopieren</basebutton>
          </div>
        </div>
        <form data-v-dd4104c0="" class="space-y-4">
          <div data-v-dd4104c0=""><label data-v-dd4104c0="" for="newShortCode" class="block text-sm font-medium text-gray-700 mb-1">Kurz-Code</label><input data-v-dd4104c0="" id="newShortCode" type="text" required="" placeholder="z.B. mein-link" pattern="[a-zA-Z0-9-_]+" title="Nur Buchstaben, Zahlen, Bindestriche und Unterstriche erlaubt" class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-orange-500 focus:border-orange-500">
            <p data-v-dd4104c0="" class="text-xs text-gray-500 mt-1"> Nur Buchstaben, Zahlen, Bindestriche und Unterstriche erlaubt </p>
          </div>
          <div data-v-dd4104c0=""><label data-v-dd4104c0="" for="newUrl" class="block text-sm font-medium text-gray-700 mb-1">Ziel-URL</label><input data-v-dd4104c0="" id="newUrl" type="url" required="" placeholder="https://example.com" class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-orange-500 focus:border-orange-500"></div><!-- Update Error -->
          <div data-v-dd4104c0="" class="bg-red-50 border border-red-200 rounded-md p-4">
            <div data-v-dd4104c0="" class="flex"><svg data-v-dd4104c0="" class="h-5 w-5 text-red-400" fill="currentColor" viewBox="0 0 20 20">
                <path data-v-dd4104c0="" fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd"></path>
              </svg>
              <div data-v-dd4104c0="" class="ml-3">
                <h3 data-v-dd4104c0="" class="text-sm font-medium text-red-800">Fehler beim Aktualisieren</h3>
                <p data-v-dd4104c0="" class="mt-1 text-sm text-red-700">{
                  "value": ""
                  }</p>
              </div>
            </div>
          </div><!-- Success Message -->
          <div data-v-dd4104c0="" class="bg-green-50 border border-green-200 rounded-md p-4">
            <div class="flex" data-v-dd4104c0=""><svg class="h-5 w-5 text-green-400" fill="currentColor" viewBox="0 0 20 20" data-v-dd4104c0="">
                <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" data-v-dd4104c0=""></path>
              </svg>
              <div class="ml-3" data-v-dd4104c0="">
                <h3 class="text-sm font-medium text-green-800" data-v-dd4104c0="">Erfolgreich aktualisiert</h3>
                <p class="mt-1 text-sm text-green-700" data-v-dd4104c0="">Die URL wurde erfolgreich geändert.</p>
              </div>
            </div>
          </div><!-- Form Actions -->
          <div data-v-dd4104c0="" class="flex justify-end space-x-3 pt-4 border-t border-gray-200">
            <basebutton data-v-dd4104c0="" variant="secondary">Abbrechen</basebutton>
            <basebutton data-v-dd4104c0="" data-testid="save-button" variant="primary" type="submit" disabled="true" loading="[object Object]">Wird aktualisiert...</basebutton>
          </div>
        </form>
      </div>
    </div>
  </div>
</dialog>"
`;
